--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
   <!-- BASICS -->
   <meta charset="utf-8">
-  <title>Vlava - One page responsive bootstrap site template</title>
-  <meta name="description" content="">
+  <title>Quantical - Capital managment hedge fund</title>
+  <meta name="description" content="TODO: SEO optimize:  We offer pooled investment in options trading on US exchanges. Our trading matador living in NY center takes precious care of your investment, while our fund managers provide you the freedom to withdraw anytime according to your goals and needs.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="js/rs-plugin/css/settings.css" media="screen">
   <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen">
-  <link rel="stylesheet" href="css/flexslider.css" type="text/css">
-  <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen">
+  <link rel="stylesheet" type="text/css" href="css/flexslider.css">
+  <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css" media="screen">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700">
-
   <link rel="stylesheet" href="css/style.css">
   <!-- skin -->
   <link rel="stylesheet" href="skin/default.css">
@@ -23,7 +22,6 @@
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com
   ======================================================= -->
-
 </head>
 
 <body>
