--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       	  <span class="fa fa-bars color-white"></span>
         </button>
         <div class="navbar-logo">
-          <a href="index.html"><img data-0="width:155px;" data-300=" width:120px;" src="img/logo.png" alt=""></a>
+          <a href="index.html"><img data-0="width:155px;" data-300=" width:120px;" src="img/QuantLogoSNápisem.png" alt="_Quantical_"></a>
         </div>
       </div>
       <div class="navbar-collapse collapse">
@@ -50,8 +50,8 @@
 
   <section id="intro">
     <div class="intro-content">
-      <h2>Welcome to Vlava!</h2>
-      <h3>Lorem ipsum dolor sit amet, elit persecuti efficiendi</h3>
+      <h2>Welcome to Quantical!</h2>
+      <h3>Solid gains via options trading( TODO)</h3>
       <div>
         <a href="#section-services" class="btn-get-started scrollto">Get Started</a>
       </div>
