--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       	  <span class="fa fa-bars color-white"></span>
         </button>
         <div class="navbar-logo">
-          <a href="index.html"><img data-0="width:155px;" data-300=" width:120px;" src="img/QuantLogoSNápisem.png" alt="_Quantical_"></a>
+          <a href="index.html"><img data-0="width:155px;" data-300=" width:120px;" src="img/QuanticalLogoSPodnadpisem.png" alt="_Quantical_"></a>
         </div>
       </div>
       <div class="navbar-collapse collapse">
