--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
   <section id="intro">
     <div class="intro-content">
-      <h2>Welcome to Quantical!</h2>
-      <h3>Solid gains via options trading( TODO)</h3>
+      <h2>Introducing the golden hands in New York:</h2>
+      <h3>Years of successfull trading experience now available for every fund partner to harness.</h3>
       <div>
-        <a href="#section-services" class="btn-get-started scrollto">Get Started</a>
+        <a href="#section-services" class="btn-get-started scrollto">Get on schedule</a>
       </div>
     </div>
   </section>
