--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- BASICS -->
   <meta charset="utf-8">
   <title>Quantical - Capital managment hedge fund</title>
-  <meta name="description" content="TODO: SEO optimize:  We offer pooled investment in options trading on US exchanges. Our trading matador living in NY center takes precious care of your investment, while our fund managers provide you the freedom to withdraw anytime according to your goals and needs.">
+  <meta name="description" content="We offer pooled investment in options trading on US exchanges. Our trading matador living in NY center takes precious care of your investment, while our fund managers provide you the freedom to withdraw anytime according to your goals and needs.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="js/rs-plugin/css/settings.css" media="screen">
   <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen">
@@ -19,8 +19,7 @@
   <!-- =======================================================
     Theme Name: Vlava
     Theme URL: https://bootstrapmade.com/vlava-free-bootstrap-one-page-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
+    Theme Author: BootstrapMade.com
   ======================================================= -->
 </head>
 
@@ -33,7 +32,7 @@
       	  <span class="fa fa-bars color-white"></span>
         </button>
         <div class="navbar-logo">
-          <a href="index.html"><img data-0="width:155px;" data-300=" width:120px;" src="img/QuanticalLogoSPodnadpisem.png" alt="_Quantical_"></a>
+          <a href="index.html"><img data-0="width:275px;" data-300=" width:120px;" src="img/QuanticalLogoSPodnadpisem.png" alt="_Quantical_"></a>
         </div>
       </div>
       <div class="navbar-collapse collapse">
@@ -50,10 +49,10 @@
 
   <section id="intro">
     <div class="intro-content">
-      <h2>Welcome to Quantical!</h2>
-      <h3>Solid gains via options trading( TODO)</h3>
+      <h2>Introducing the golden hands in New York:</h2>
+      <h3>Years of successfull trading experience now available for every fund partner to harness.</h3>
       <div>
-        <a href="#section-services" class="btn-get-started scrollto">Get Started</a>
+        <a href="#section-services" class="btn-get-started scrollto">Get on schedule</a>
       </div>
     </div>
   </section>
