--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
   <section id="intro">
     <div class="intro-content">
-      <h2>Introducing the golden hands in New York:</h2>
-      <h3>Years of successfull trading experience now available for every fund partner to harness.</h3>
+      <h2>Introducing Quantical hedge fund</h2>
+      <h3>Open-ended private fund trading options</h3>
       <div>
-        <a href="#section-services" class="btn-get-started scrollto">Get on schedule</a>
+        <a href="#section-services" class="btn-get-started scrollto">Want to stay informed? (Click)</a>
       </div>
     </div>
   </section>
