--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h2>Introducing Quantical hedge fund</h2>
       <h3>Open-ended private fund trading options</h3>
       <div>
-        <a href="#section-services" class="btn-get-started scrollto">Want to stay informed? (Click)</a>
+        <a href="#section-services" class="btn-get-started scrollto">Get involved</a>
       </div>
     </div>
   </section>
