--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       	  <span class="fa fa-bars color-white"></span>
         </button>
         <div class="navbar-logo">
-          <a href="index.html"><img data-0="width:275px;" data-300=" width:120px;" src="img/logo.png" alt="_Quantical_"></a>
+          <a href="#header"><img data-0="width:275px;" data-300=" width:120px;" src="img/logo.png" alt="_Quantical_"></a>
         </div>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#section-about">About</a></li>
-          <li><a href="#section-works">Portfolio</a></li>
+          <li class="active"><a href="#header">Home</a></li>
+          <li><a href="#section-what-we-do">What we do</a></li>
+          <li><a href="#section-team">Team</a></li>
           <li><a href="#section-contact">Contact</a></li>
         </ul>
       </div>
@@ -197,15 +197,15 @@
     </div>
   </section>
 
-  <!-- about -->
-  <section id="section-about" class="section appear clearfix">
+  <!-- team -->
+  <section id="section-team" class="section appear clearfix">
     <div class="container">
 
       <div class="row mar-bot40">
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
-            <h2 class="section-heading animated" data-animation="bounceInUp">Behind Vlava</h2>
-            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam.</p>
+            <h2 class="section-heading animated" data-animation="bounceInUp">Behind Quantical</h2>
+            <p>Humbly introducing our two stars..:</p>
           </div>
         </div>
       </div>
@@ -215,8 +215,8 @@
           <div class="team-member">
             <figure class="member-photo"><img src="img/team/member1.jpg" alt=""></figure>
             <div class="team-detail">
-              <h4>Jason Doe</h4>
-              <span>User experiences</span>
+              <h4>Jozef Michalko</h4>
+              <span>Trading expert</span>
             </div>
           </div>
         </div>
@@ -224,34 +224,15 @@
           <div class="team-member">
             <figure class="member-photo"><img src="img/team/member2.jpg" alt=""></figure>
             <div class="team-detail">
-              <h4>Timothy Clark</h4>
-              <span>Web developer</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="team-member">
-            <figure class="member-photo"><img src="img/team/member3.jpg" alt=""></figure>
-            <div class="team-detail">
-              <h4>Vicky Tan</h4>
-              <span>Web designer</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="team-member">
-            <figure class="member-photo"><img src="img/team/member4.jpg" alt=""></figure>
-            <div class="team-detail">
-              <h4>Kevin Peterson</h4>
-              <span>UI designer</span>
+              <h4>Luděk Skýva</h4>
+              <span>Fund administrator</span>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </section>
-  <!-- /about -->
+  <!-- /team -->
 
   <!-- spacer section:stats -->
   <section id="parallax1" class="section" data-stellar-background-ratio="0.5">
