--- a/index.html
+++ b/index.html
@@ -210,25 +210,27 @@
         </div>
       </div>
 
+        <div class="col-md-3">
+          <div class="team-member">
+            <figure class="member-photo"><img src="img/team/member2.jpg" alt=""></figure>
+            <div class="team-detail">
+              <h4>Luděk Skýva</h4>
+              <span>Founder, Chief Executive Officer</span>
+            </div>
+          </div>
+        </div>
+	      
       <div class="row align-center mar-bot40">
         <div class="col-md-3">
           <div class="team-member">
             <figure class="member-photo"><img src="img/team/member1.jpg" alt=""></figure>
             <div class="team-detail">
               <h4>Jozef Michalko</h4>
-              <span>Trading expert</span>
+              <span>Chief Investment Officer</span>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="team-member">
-            <figure class="member-photo"><img src="img/team/member2.jpg" alt=""></figure>
-            <div class="team-detail">
-              <h4>Luděk Skýva</h4>
-              <span>Fund administrator</span>
-            </div>
-          </div>
-        </div>
+	      
       </div>
     </div>
   </section>
