--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h2>Introducing Quantical hedge fund</h2>
       <h3>Open-ended private fund trading options</h3>
       <div>
-        <a href="#section-services" class="btn-get-started scrollto">Get involved</a>
+        <a href="#section-contact" class="btn-get-started scrollto">Get involved</a>
       </div>
     </div>
   </section>
@@ -70,127 +70,7 @@
           </div>
           <h3 class="text-bold">Responsive</h3>
           <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
           <div class="clear"></div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
-            <div class="float-left mar-right20">
-              <a href="#" class="hi-icon hi-icon-location">location</a>
-            </div>
-          </div>
-          <h3 class="text-bold">Multi usage</h3>
-          <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
-          <div class="clear"></div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
-            <div class="float-left mar-right20">
-              <a href="#" class="hi-icon hi-icon-images">images</a>
-            </div>
-          </div>
-          <h3 class="text-bold">Beautiful</h3>
-          <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
-          <div class="clear"></div>
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
-            <div class="float-left mar-right20">
-              <a href="#" class="hi-icon hi-icon-archive">archive</a>
-            </div>
-          </div>
-          <h3 class="text-bold">Valid HTML5</h3>
-          <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
-          <div class="clear"></div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
-            <div class="float-left mar-right20">
-              <a href="#" class="hi-icon hi-icon-contract">Mobile</a>
-            </div>
-          </div>
-          <h3 class="text-bold">Modern</h3>
-          <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
-          <div class="clear"></div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
-            <div class="float-left mar-right20">
-              <a href="#" class="hi-icon hi-icon-clock">Faster</a>
-            </div>
-          </div>
-          <h3 class="text-bold">Fast loading</h3>
-          <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
-
-          <div class="clear"></div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- spacer section:testimonial -->
-  <section id="testimonials" class="section" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="align-center">
-            <div class="flexslider testimonials-slider">
-              <ul class="slides">
-                <li>
-                  <div class="testimonial clearfix">
-                    <div class="mar-bot20">
-                      <img alt="" src="img/testimonial/testimonial1.png" class="img-circle">
-                    </div>
-                    <i class="fa fa-quote-left fa-5x"></i>
-                    <h5>
-												Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Sed sagittis tortor vel arcu sollicitudin nec tincidunt metus suscipit.Nunc velit risus, dapibus non interdum.
-											</h5>
-                    <br/>
-                    <span class="author">&mdash; SARAH DOE <a href="#">www.siteurl.com</a></span>
-                  </div>
-                </li>
-
-                <li>
-                  <div class="testimonial clearfix">
-                    <div class="mar-bot20">
-                      <img alt="" src="img/testimonial/testimonial2.png" class="img-circle">
-                    </div>
-                    <i class="fa fa-quote-left fa-5x"></i>
-                    <h5>
-												Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Sed sagittis tortor vel arcu sollicitudin nec tincidunt metus suscipit.Nunc velit risus, dapibus non interdum.
-												</h5>
-                    <br/>
-                    <span class="author">&mdash; NICOLE DOE <a href="#">www.siteurl.com</a></span>
-                  </div>
-                </li>
-                <li>
-                  <div class="testimonial clearfix">
-                    <div class="mar-bot20">
-                      <img alt="" src="img/testimonial/testimonial3.png" class="img-circle">
-                    </div>
-                    <i class="fa fa-quote-left fa-5x"></i>
-                    <h5>
-		                  Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Sed sagittis tortor vel arcu sollicitudin nec tincidunt metus suscipit.Nunc velit risus, dapibus non interdum.
-										</h5>
-                    <br/>
-                    <span class="author">&mdash; DASON KRUN <a href="#">www.siteurl.com</a></span>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
 
       </div>
@@ -210,15 +90,15 @@
         </div>
       </div>
 
-        <div class="col-md-3">
-          <div class="team-member">
-            <figure class="member-photo"><img src="img/team/member2.jpg" alt=""></figure>
-            <div class="team-detail">
-              <h4>Luděk Skýva</h4>
-              <span>Founder, Chief Executive Officer</span>
-            </div>
+      <div class="col-md-3">
+        <div class="team-member">
+          <figure class="member-photo"><img src="img/team/member2.jpg" alt=""></figure>
+          <div class="team-detail">
+            <h4>Luděk Skýva</h4>
+            <span>Founder, Chief Executive Officer</span>
           </div>
         </div>
+      </div>
 	      
       <div class="row align-center mar-bot40">
         <div class="col-md-3">
@@ -237,230 +117,7 @@
   <!-- /team -->
 
   <!-- spacer section:stats -->
-  <section id="parallax1" class="section" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row appear stats">
-        <div class="col-md-3">
-          <div class="align-center color-white txt-shadow">
-            <div class="icon">
-              <i class="fa fa-coffee fa-5x"></i>
-            </div>
-            <strong id="counter-coffee" class="number">500</strong><br>
-            <span class="text">Black Coffee Cups</span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="align-center color-white txt-shadow">
-            <div class="icon">
-              <i class="fa fa-music fa-5x"></i>
-            </div>
-            <strong id="counter-music" class="number">345</strong><br>
-            <span class="text">MP3 Songs</span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="align-center color-white txt-shadow">
-            <div class="icon">
-              <i class="fa fa-clock-o fa-5x"></i>
-            </div>
-            <strong id="counter-clock" class="number">1235</strong><br>
-            <span class="text">Hard Minutes</span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="align-center color-white txt-shadow">
-            <div class="icon">
-              <i class="fa fa-heart fa-5x"></i>
-            </div>
-            <strong id="counter-heart" class="number">478</strong><br>
-            <span class="text">Lovely Clients</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- section works -->
-  <section id="section-works" class="section appear clearfix">
-    <div class="container">
-
-      <div class="row mar-bot40">
-        <div class="col-md-offset-3 col-md-6">
-          <div class="section-header">
-            <h2 class="section-heading animated" data-animation="bounceInUp">Portfolio</h2>
-            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <nav id="filter" class="col-md-12 text-center">
-          <ul>
-            <li><a href="#" class="current btn btn-small" data-filter="*">All</a></li>
-            <li><a href="#" class="btn btn-small" data-filter=".webdesign">Web Design</a></li>
-            <li><a href="#" class="btn btn-small" data-filter=".photography">Photography</a></li>
-            <li><a href="#" class="btn btn-small" data-filter=".print">Print</a></li>
-          </ul>
-        </nav>
-        <div class="col-md-12">
-          <div class="row">
-            <div class="portfolio-items isotopeWrapper clearfix" id="3">
-
-              <article class="col-md-4 isotopeItem webdesign">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img1.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img1.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img2.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img2.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-
-              <article class="col-md-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img3.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img3.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img4.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img4.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img5.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img5.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem webdesign">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img6.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img6.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img7.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img7.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img8.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img8.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img9.jpg" alt="">
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img9.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </div>
-
-          </div>
-
-
-        </div>
-      </div>
-
-    </div>
-  </section>
-  <section id="clients" class="section clearfix bg-white">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo1.png">
-            </div>
-
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo2.png">
-            </div>
-
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo3.png">
-            </div>
-
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo4.png">
-            </div>
-
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo5.png">
-            </div>
-            <div class="col-sm-2 align-center">
-              <img alt="logo" src="img/clients/logo6.png">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- map -->
-  <section id="section-map" class="clearfix">
-    <div id="google-map" data-latitude="40.713417" data-longitude="-74.0092125"></div>
-  </section>
+  <!-- ˙`section:statistics was here:<section id="parallax1" class="section" data-stellar-background-ratio="0.5"-->
 
   <!-- contact -->
   <section id="section-contact" class="section appear clearfix">
@@ -469,8 +126,8 @@
       <div class="row mar-bot40">
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
-            <h2 class="section-heading animated" data-animation="bounceInUp">Contact us</h2>
-            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam.</p>
+            <h2 class="section-heading animated" data-animation="bounceInUp">Get involved</h2>
+            <p>Our teamTODOhref is working hard on establishing all the právní structures and systems.</p>
           </div>
         </div>
       </div>
@@ -511,6 +168,7 @@
 
     </div>
   </section>
+
 
   <section id="footer" class="section footer">
     <div class="container">
