--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
     </div>
   </section>
 
-  <!-- services -->
-  <section id="section-services" class="section pad-bot30 bg-white">
+  <!-- What we do AKA Philosophy -->
+  <section id="section-what-we-do" class="section pad-bot30 bg-white">
     <div class="container">
-
+          <h2 class="section-heading animated" data-animation="bounceInUp">What We Do</h2>   <!-- Any h2 seem to work ok./ -->
+          <p>We offer pooled investment in options trading on US exchanges. Our trading matador living in NY center takes precious care of your investment, while our fund managers provide you the freedom to withdraw anytime according to your goals and needs.</p>
+          <div class="clear"></div>
+      
       <div class="row mar-bot40">
         <div class="col-lg-4">
           <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
@@ -72,7 +75,6 @@
           <p>Lorem ipsum dolor sit amet, elit persecuti efficiendi sit ad.</p>
           <div class="clear"></div>
         </div>
-
       </div>
     </div>
   </section>
