PoC done: add subfolder with scpaed cz page variant linked

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <li><a href="#">About us</a></li>
           <li><a href="#">Privacy policy</a></li>
           <li><a href="#">Get in touch</a></li>
-	  <li><a href="/en">Switch to <b>Czech</b></a></li>
+	  <li><a href="./cz/index.html">Switch to <b>Czech</b></a></li>
         </ul>
       </div>
       <div class="row align-center copyright">
